          requires that the server be running monotone 0.46 or later.
          Access control on the server is uses a new lua hook
          "get_remote_automate_permitted(identity, command_line, options)".

        - There's also a new command "automate remote" that's very much
          the same, but executes only a single command and does not
          stdio-encode the output.

        Bugs fixed

        - A regression from 0.45's key migration prevented the proper
          output of the `committer` field in 'git_export'.

        - 'db info --full' no longer crashes when executed on a database
          with only one revision.

        - The mtn_automate Lua function which can be used for custom
          commands now properly handles binary data.

        Other

        - Added the script of the Lua-based contributed Monotone 
          extension command "mtn remote_export" to contrib/command/
          with which a remote revision can be exported locally without
          having to fetch all of the history before.


Fri Sep 11 20:50:00 UTC 2009

        0.45 release.

        Changes

        - Certs now link to the key that signed them by the key's
          hash, instead of its name.  This should provide some
          security and usability improvements.

          The database schema has been changed, so you will need to
          run 'mtn db migrate' (preferably after making a backup copy
          of your db).

          The netsync protocol version has also changed. However, we
          found space to implement full protocol version negotiation,
          so no flag day is needed.  If your particular project has a
          situation where there are multiple keys with the same name,
          you will receive errors when trying to sync certs signed by
          those keys to older netsync peers.

          A number of commands have slightly different output now,
          particularly 'ls certs', 'ls tags', 'automate keys',